--- a/src/index.css
+++ b/src/index.css
@@ -2,6 +2,10 @@
 
 
 body {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
   margin: 0;
   font-family: -apple-system, BlinkMacSystemFont, 'Rosario', 'Roboto', 'Oxygen',
     'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
