--- a/src/pages/CardEdit/styles.css
+++ b/src/pages/CardEdit/styles.css
@@ -9,7 +9,7 @@
 }
 
 .Edit-title{
-    width: 390px;
+    width: 225px;
     height: 46px;
     background: #F2F2F2;
     box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
@@ -110,6 +110,7 @@
 }
 
 .submit {
+    margin:20px;
     grid-column-start: 1;
     grid-column-end:3;
     display: flex;
@@ -117,6 +118,7 @@
 }
 
 .submit button{
+    
     border: 0;
     width: 130px;
     height: 28px;
@@ -133,4 +135,33 @@
     background: #35bcf1;
     box-shadow:  0px 4px 4px #dbdbdb;
 
+}
+
+.created-cards ul{
+    display: grid;
+    grid-template-columns: 1fr 1fr;
+}
+
+
+@media(max-width: 425px){
+    .edit-painel{
+        
+        flex-direction: column;
+        align-items: center;
+        margin-bottom: 30px;
+    }
+
+    .edit-form{
+        margin: 30px;
+        height: 650px;
+        width: 225px;
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+    }
+    .form-stats{
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+    }
 }
