--- a/src/components/cards/card.css
+++ b/src/components/cards/card.css
@@ -1,13 +1,14 @@
 .card-container{
     width: 225px;
     height: 354px;
-    background: #F2F2F2;
     box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
     border-radius: 5px 25px 5px 5px;
     display: flex;
     flex-direction: column;
     align-items: center;
     justify-content: center;
+    transition: 0.3s;
+    cursor: pointer;
 
 }
 
@@ -115,3 +116,10 @@
     font-size: 5px;
     line-height: 6px;
 }
+
+.card-container:hover{
+    transform: scale(1.2);
+    box-shadow: 5px 5px 15px rgba(0, 0, 0, 0.25);
+    transition: 0.3s;
+}
+
