--- a/src/App.css
+++ b/src/App.css
@@ -5,6 +5,8 @@
   flex-direction: column;
   align-items: center;
   justify-content: center;
+  padding: 2rem;
+
 }
 
 
@@ -12,5 +14,12 @@
   background-color: #fff;
  
   color: #000000;
+}
+
+.PokemonList{
+  display: flex;
+  flex-wrap: wrap;
+  gap: 20px;
+  margin: 0 auto;
 }
 
